css/theme/local-theme.css
/* ... */
#block-ldbasenewsearchlink {
  padding: 0 0 20px 0;
}

.path-search .form-item.form-type-textfield {
  width: 100%;
  margin: 0.5em;
}

div.region-sidebar-first div.block-facet--links {
  padding: 0;
}

#block-portcullis-content > div > div > div > div.view-content > div.views-row,
div.view-search-ldbase-resources div.view-content > div.views-row {
  background: #ebebeb;
  margin-bottom: 1em;
  padding: 1em;
  border: 1px solid #cdcdcd;
  border-radius: 4px;
}

#block-portcullis-content > div > div > div > div.view-content > div.views-row h3 {
  margin: 0;
}

#block-facetsummary {
  padding: 0;
}

#block-facetsummary ul {
  list-style: none;
  list-style-image: none;
  padding: 0;
}

li.facet-summary-item--facet {
  display: inline-block;
  margin: 5px 5px 0 0;
}

li.facet-summary-item--facet span.facet-item__value {
  font-weight: bold;
  font-size: 14px;
}

li.facet-summary-item--facet a, li.facet-summary-item--facet a:hover, li.facet-summary-item--facet a:visited {
  background-color: #222;
  color: #FFF;
  display: block;
  padding: 5px 15px 5px 15px;
  text-decoration: none;
  border-radius: 4px;
}

li.facet-summary-item--facet a::after {
  padding-left: 10px;
  content: "✕";
}

div.facets-widget-links {
  margin-bottom: 1em;
}

div.facets-widget-links ul {
  margin-block-end: 0;
}

a.facets-soft-limit-link {
  font-weight: bold;
  padding-left: 40px;
}

li.facet-item a.is-active {
  font-weight: bold;
}

li.facets-reset {
  display: block;
  margin-top: -20px;
  margin-left: -20px;
  padding-bottom: 10px;
}

/* Styling for Project View block */
div#project-tree-view-wrapper {
  font-size: 14px;
  font-weight: bolder;
  color: #671e30;
}

div#project-tree-view-wrapper a {
  text-decoration: none;
}

div#project-tree-view-wrapper a:hover {
  text-decoration: underline;
}

div#project-tree-view-wrapper ul {
  padding-left: 15px;
  list-style-type: circle;
}

li.project-tree-view-item-current:before {
  content: "\25BA \0020";
  padding-left: 0;
  color: #2a2a2a;
  margin-left: -16px;
}

li.project-tree-view-item-current > a {
  color: #dc143c;
}

li.project-tree-view-item-link {
  line-height: 110%;
  padding: 10px 0 0 0;
}

/* Styling for Social Media Buttons */
div#block-socialmediablock {
  padding: 0;
}
.resp-sharing-button__link,
.resp-sharing-button__icon {
  display: inline-block
}

.resp-sharing-button__link {
  text-decoration: none;
  color: #fff;
  margin: 0.5em
}

.resp-sharing-button {
  border-radius: 5px;
  transition: 25ms ease-out;
  padding: 0.5em 0.75em;
  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
}

.resp-sharing-button__icon svg {
  width: 1em;
  height: 1em;
  margin-right: 0.4em;
  vertical-align: top
}

.resp-sharing-button--small svg {
  margin: 0;
  vertical-align: middle
}

/* Non solid icons get a stroke */
.resp-sharing-button__icon {
  stroke: #fff;
  fill: none
}

/* Solid icons get a fill */
.resp-sharing-button__icon--solid,
.resp-sharing-button__icon--solidcircle {
  fill: #fff;
  stroke: none
}

.resp-sharing-button--twitter {
  background-color: #55acee
}

.resp-sharing-button--twitter:hover {
  background-color: #2795e9
}

.resp-sharing-button--facebook {
  background-color: #3b5998
}

.resp-sharing-button--facebook:hover {
  background-color: #2d4373
}

.resp-sharing-button--reddit {
  background-color: #5f99cf
}

.resp-sharing-button--reddit:hover {
  background-color: #3a80c1
}

.resp-sharing-button--email {
  background-color: #777
}

.resp-sharing-button--email:hover {
  background-color: #5e5e5e
}

.resp-sharing-button--facebook {
  background-color: #3b5998;
  border-color: #3b5998;
}

.resp-sharing-button--facebook:hover,
.resp-sharing-button--facebook:active {
  background-color: #2d4373;
  border-color: #2d4373;
}

.resp-sharing-button--twitter {
  background-color: #55acee;
  border-color: #55acee;
}

.resp-sharing-button--twitter:hover,
.resp-sharing-button--twitter:active {
  background-color: #2795e9;
  border-color: #2795e9;
}

.resp-sharing-button--email {
  background-color: #777777;
  border-color: #777777;
}

.resp-sharing-button--email:hover,
.resp-sharing-button--email:active {
  background-color: #5e5e5e;
  border-color: #5e5e5e;
}

.resp-sharing-button--reddit {
  background-color: #5f99cf;
  border-color: #5f99cf;
}

.resp-sharing-button--reddit:hover,
.resp-sharing-button--reddit:active {
  background-color: #3a80c1;
  border-color: #3a80c1;
}

/* General Tasks Menus */
ul.menu li a.menu-drop-down {
  padding-right: 40px !important;
}

/* Project Tasks Menu */
h2#block-projecttasks-2-menu {
  display: none;
}

nav#block-projecttasks-2 h2#block-projecttasks-2-menu {
  border: none;
}

nav#block-projecttasks-2 ul.menu li {
  float: left;
  border: 2px solid black;
  border-radius: 7px;
  margin-right: 10px;
}

nav#block-projecttasks-2 ul.menu li:hover {
  background-color: #ededed;
}

nav#block-projecttasks-2 ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}

nav#block-projecttasks-2 ul.menu li a:before {
  content: none;
}

nav#block-projecttasks-2 ul.menu li.menu-item--expanded ul {
  display: none;
  position: absolute;
  clear: both;
  background-color: white;
  padding: 0;
  border: 1px solid #ccc;
  border-radius: 7px;
  min-width: 180px;
}

nav#block-projecttasks-2 ul.menu li.menu-item--expanded ul.menu li {
  border: none;
  width: 100%;
}

nav#block-projecttasks-2 ul.menu li.menu-item--expanded:hover > ul {
  display: block;
  z-index: 9999;
}

/* Second Project Tasks Menu */

nav.menu--second-project-tasks {
  margin-top: 20px;
  margin-bottom: 20px;
}

nav.menu--second-project-tasks ul.menu li {
  float: left;
  border: 2px solid black;
  margin-right: 10px;
  border-radius: 7px;
}

nav.menu--second-project-tasks ul.menu li:hover {
  background-color: #ededed;
}

nav.menu--second-project-tasks ul.menu li a {
  font-weight: 500;
  color: #671e30;
  font-size: 85%;
  padding: 5px 16px 6px;
}
/* ... */

